--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
     --bg-color: #1f1f21;
     --text-color: #fff;
     --main-color: #ffae00;
+    --grey-color: #E0E0E0;
 
     --big-font: 4rem;
     --p-font: 1.1rem;
@@ -105,14 +106,19 @@ section {
 .home-img {
 
     width: 630px;
-    height: 630px;
+    height: fit-content;
+    border-radius: 25px;
+    border: 4px solid var(--main-color);
 }
 
 .home-img img {
-
     width: 100%;
     height: 100%;
     object-fit: contain;
+    display: block;
+    border-radius: 20px;
+    border: 4px solid var(--main-color);
+    margin: -4px -6px 6px;
 }
 
 .home-text span {
