--- a/style.css
+++ b/style.css
@@ -190,17 +190,23 @@ section {
 .share p {
     font-size: 17px;
     color: var(--text-color);
-    margin-right: 25px;
+    margin-right: 15px;
 }
 
 .social i {
+    background: linear-gradient(130.8deg, #383528 0%, #191919 100%);
+    box-shadow: 0px 20px 40px #00000070;
+    border: 1px solid #3b3b3b;
+    border-radius: 100px;
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    height: 45px;
-    width: 45px;
+    height: 35px;
+    width: 35px;
     color: var(--text-color);
     font-size: 22px;
+    margin-right: 15px;
+
 }
 
 @media (max-width:1850px) {
@@ -212,6 +218,12 @@ section {
     section {
         padding: 0 8%;
         transition: .2s;
+    }
+
+    .share {
+        left: 8%;
+        bottom: 2rem;
+
     }
 }
 
@@ -226,6 +238,12 @@ section {
         padding: 0 4%;
         transition: .2s;
     }
+
+    .share {
+        left: 5%;
+        bottom: 3rem;
+
+    }
 }
 
 @media (max-width:1000px) {
@@ -235,6 +253,12 @@ section {
         font-size: 12px;
         transition: .2s;
     }
+
+    .share {
+        left: 4%;
+        bottom: 4rem;
+    }
+
 }
 
 @media (max-width:850px) {
@@ -273,6 +297,12 @@ section {
         width: auto;
         height: auto;
         transition: .2s;
+    }
+
+    .share {
+        left: 5%;
+        bottom: -1rem;
+        margin-bottom: 30px;
     }
 
 }
